[package]
name = "cosmos_reward_pool_contract"
version = "0.1.2"
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  -e CARGO_TERM_COLOR=always \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.2.1", features = ["staking"] }
cosmwasm-schema = "1.2.1"
#cosmwasm-storage = "1.2.1"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.3"
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
semver = "1"
cw2 = "1.1.0"
k256 = { version = "0.13.2", default-features = false, features = [
  "sha256",
  "ecdsa",
  "digest",
] }
ripemd = { version = "0.1.3", default-features = false }
bech32 = { version = "0.9.1" }
thiserror = "1.0.38"
